# cid

./: .woodpecker.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
benches/: cid_vs_substrate_guard.rs  gate_benchmark.rs
cid-wasm/: Cargo.toml
cid-wasm/src/: lib.rs
docs/: AGENT_UPDATE_SUMMARY.md  DOMAIN_IMPLEMENTATION.md  PLAN-v0.5.0.md  SYSTEM2-TECHNICAL-NOTE.md
src/: lib.rs  main.rs
src/core/: ball.rs  mod.rs  pocket.rs
src/economy/: conversation.rs  cost.rs  mod.rs
src/gates/: confidence.rs  fact.rs  fallacy.rs  formal.rs  logic.rs  math.rs  mod.rs
src/inference/: bias.rs  cache.rs  compressor.rs  fixer.rs  json.rs  mod.rs  pipeline.rs  proxy.rs  result.rs  sanity.rs  scorer.rs  stream.rs
src/kb/: facts.rs  facts_data.rs  lookup.rs  mod.rs
src/mcp/: http.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
src/output/: format.rs  trace.rs
src/plugin/: mod.rs
src/state/: machine.rs
src/tanto/: convert.rs  determinism.rs  formulas.rs  math.rs  mod.rs  parser.rs  pipeline.rs  rational.rs  sanity.rs  solver.rs  thinking.rs  verify.rs
tests/: integration.rs
